--- a/src/main/webapp/pages/customer/company-tickets.xhtml
+++ b/src/main/webapp/pages/customer/company-tickets.xhtml
@@ -35,41 +35,33 @@
         }
     </style>
 
-    <!--
     #{ticketCustomerBean.fetchAllTickets()}
-    -->
 
-    <h:outputText value="Search: " />
+    <h:outputText value="Suche:" />
     <p:inputText value="#{ticketCustomerBean.searchString}">
         <p:ajax event="keyup" delay="100" update="searchResult"
                 listener="#{ticketCustomerBean.fetchAllTickets()}" />
     </p:inputText>
 
-    <!--
-    <h:outputText rendered="#{empty ticketCustomerBean.searchResult}" value="Keine Tickets gefunden" />
-    -->
+    <p:dataScroller id="searchResult" value="#{ticketCustomerBean.searchResult}" var="ticket" chunkSize="10" rendered="#{not empty ticketCustomerBean.searchResult}">
+        <f:facet name="header">
+            Scroll Down to Load More Tickets
+        </f:facet>
 
-    <p:dataScroller id="searchResult" value="#{ticketCustomerBean.searchResult}" var="ticket" chunkSize="10">
-        <h:panelGrid rendered="#{not empty ticketCustomerBean.searchResult}">
-            <f:facet name="header">
-                Scroll Down to Load More Tickets
-            </f:facet>
+        <h:panelGrid columns="3" style="width:100%" columnClasses="logo,logo,detail">
+            <h:commandButton action="#{ticketCustomerBean.viewTicketDetails(ticket)}" value="Details" id="detailsButton" />
 
-            <h:panelGrid columns="3" style="width:100%" columnClasses="logo,logo,detail">
-                <h:commandButton action="#{ticketCustomerBean.viewTicketDetails(ticket)}" value="Details" id="detailsButton" />
+            <p:graphicImage library="images" name="#{ticket.status}.png" alt="#{ticket.status}"/>
 
-                <p:graphicImage library="images" name="#{ticket.status}.png" alt="#{ticket.status}"/>
+            <p:outputPanel>
+                <h:panelGrid columns="2" cellpadding="5">
+                    <h:outputText value="Editor:" />
+                    <h:outputText value="#{ticket.editorId}" style="font-weight: bold"/>
 
-                <p:outputPanel>
-                    <h:panelGrid columns="2" cellpadding="5">
-                        <h:outputText value="Editor:" />
-                        <h:outputText value="#{ticket.editorId}" style="font-weight: bold"/>
-
-                        <h:outputText value="Subject:" />
-                        <h:outputText value="#{ticket.subject}" style="font-weight: bold"/>
-                    </h:panelGrid>
-                </p:outputPanel>
-            </h:panelGrid>
+                    <h:outputText value="Subject:" />
+                    <h:outputText value="#{ticket.subject}" style="font-weight: bold"/>
+                </h:panelGrid>
+            </p:outputPanel>
         </h:panelGrid>
     </p:dataScroller>
 
