--- a/src/main/webapp/pages/customer/company-tickets.xhtml
+++ b/src/main/webapp/pages/customer/company-tickets.xhtml
@@ -45,7 +45,7 @@
 
     <p:dataScroller id="searchResult" value="#{ticketCustomerBean.searchResult}" var="ticket" chunkSize="10" rendered="#{not empty ticketCustomerBean.searchResult}">
         <f:facet name="header">
-            Scroll Down to Load More Tickets
+            #{msgs['label.scrollDownTickets']}
         </f:facet>
 
         <h:panelGrid columns="3" style="width:100%" columnClasses="logo,logo,detail">
