--- a/src/main/webapp/pages/customer/new-ticket.xhtml
+++ b/src/main/webapp/pages/customer/new-ticket.xhtml
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:p="http://java.sun.com/jsf/html">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="/templates/basic.xhtml">
 <ui:define name="title">#{msgs['customer.create.title']}</ui:define>
