--- a/src/main/webapp/pages/loginsuccess.xhtml
+++ b/src/main/webapp/pages/loginsuccess.xhtml
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui">
 
@@ -10,7 +11,13 @@
     <ui:define name="header">#{msgs['login.header']}</ui:define>
     <ui:define name="content">
 
-        <p>Login</p>
+        <f:facet name="last">
+            <h:outputStylesheet name="login.css" library="styles" />
+        </f:facet>
+
+        <p:panel id="loginPanel" header="Willkommen zurück, #{securityBean.user.name}!" styleClass="center" >
+            <h:outputText value="Login erfolgreich." />
+        </p:panel>
 
     </ui:define>
 </ui:composition>
