--- a/src/main/webapp/pages/my-profile.xhtml
+++ b/src/main/webapp/pages/my-profile.xhtml
@@ -8,8 +8,8 @@
       xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="/templates/basic.xhtml">
-    <ui:define name="title">#{msgs['user.myprifle']}</ui:define>
-    <ui:define name="header">#{msgs['user.myprifle']}</ui:define>
+    <ui:define name="title">#{msgs['user.myProfile']}</ui:define>
+    <ui:define name="header">#{msgs['user.myProfile']}</ui:define>
     <ui:define name="content">
         <h:form id="form">
             <style type="text/css">
