faq completed *fixed

--- a/src/main/webapp/pages/help.xhtml
+++ b/src/main/webapp/pages/help.xhtml
@@ -58,7 +58,7 @@
                         <h:outputText value="Antwort: Sie werden per E-Mail über neue Einträge zu Ihrem Ticket informiert." />
                     </h:panelGrid>
                 </p:tab>
-                <p:tab title="Frage: Können Kühe reden?">
+                <p:tab title="Frage: Können Kühe sprechen?">
                     <h:panelGrid columns="1" cellpadding="10">
                         <h:outputText value="Antwort:" />
                         <pre>
